# ESIZONv2

./: .gitignore  CMakeLists.txt  PlantillaMOD.md  adminprov.c  adminprov.h  categoria.c  categoria.h  cliente.c  cliente.h  compartimentolocker.h  descuentos.c  descuentos.h  devoluciones.c  devoluciones.h  fecha.c  fecha.h  locker.c  locker.h  main.c  menu_administrador.c  menu_administrador.h  menu_cliente.c  menu_cliente.h  menuproveedor.c  menuproveedor.h  menutransportista.c  menutransportista.h  pedido.c  pedido.h  productos.c  productos.h  transportista.c  transportista.h  utilidades.c  utilidades.h
data/: AdminProv.txt  Categorias.txt  Clientes.txt  CompartimentosLockers.txt  Descuentos.txt  DescuentosClientes.txt  Devoluciones.txt  Lockers.txt  Pedidos.txt  Productos.txt  ProductosPedidos.txt  Transportistas.txt  clientes.txt
